--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   contacts_service: ^0.6.3
   permission_handler: ^10.2.0
   flutter_screenutil: ^5.6.0
+  webview_flutter: ^4.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +64,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
